# rain

./: .gitignore  README.md
tp1/fichero-invertido-frecuencia/: Pipfile  README.md  inverted_index.json  main.py  processing_logs.txt  pyproject.toml  requirements.txt
tp1/fichero-invertido-posicional/: Pipfile  README.md  inverted_index.json  inverted_index.txt  main.py  processing_logs.txt  pyproject.toml  requirements.txt
tp1/reconstruir-texto/: Pipfile  README.md  index.json  main.py  pyproject.toml  reconstructed_text.txt  reconstruction_logs.txt  requirements.txt
tp2/1/: Pipfile  README.md  main.py
tp2/2/: Pipfile  README.md  main.py  texto2.txt
tp2/3/: Pipfile  README.md  main.py  texto1.txt
tp2/4/: README.md  main.py  texto1.txt
tp2/5/: Pipfile  README.md  main.py
tp2/6/: Pipfile  README.md  main.py  output.txt
tp3/1/: Pipfile  README.md  grafo_referencias.gexf  main.py  references.json
tp3/2/: .gitignore  Pipfile  README.md  main.py  output.json  top_100_stems.txt  top_100_terminos.txt
tp4/3/: getrecord.md  identify.md  listidentifiers.md  listmetadataformats.md  listrecords.md  listsets.md
tp4/4/: .gitignore  Pipfile  README.md  main.py
tp4/5/: README.md  pom.xml
tp4/5/lucene_index/: _6.cfe  _6.si  _7.cfe  _7.si  segments_4
tp4/5/src/main/java/org/example/: Main.java
tp5/1-1/: Pipfile  README.md  main.py
tp5/1-2/: Pipfile  README.md  main.py
tp5/2/: Pipfile  README.md  main.py
